Wrap words & fix some breaking width elements

--- a/js/components/posts/style.scss
+++ b/js/components/posts/style.scss
@@ -15,8 +15,9 @@
 }
 
 .entry-title {
-	@extend %sidebar-margin;
+	@extend %sidebar-padding;
 	flex: 1 100%;
+	max-width: 100%;
 }
 
 .entry-meta {
