--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -26,3 +26,8 @@
 	margin: 0;
 	margin-left: $calc-sidebar-width;
 }
+
+%sidebar-padding {
+	padding: 0;
+	padding-left: $calc-sidebar-width;
+}
